force-app/main/default/objects/Audit_Run__c/Audit_Run__c.object-meta.xml
<CustomObject>
    <description>Header record for each execution of PermissionAnalysisBatch. Tracks start time, end time, status, and total findings count.</description>
    <label>Audit Run</label>
    <nameField>
        <displayFormat>RUN-{0000}</displayFormat>
        <label>Audit Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>