force-app/main/default/objects/Audit_Run__c/fields/Total_Findings__c.field-meta.xml
<CustomField>
    <fullName>Total_Findings__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Findings</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>